--- a/demo/WpfApplication1/WpfApplication2/WpfApplication2.csproj
+++ b/demo/WpfApplication1/WpfApplication2/WpfApplication2.csproj
@@ -53,6 +53,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MySimpleButton.cs" />
+    <Compile Include="Page_DenpendencyProperty_Priority.xaml.cs">
+      <DependentUpon>Page_DenpendencyProperty_Priority.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Page_DenpendencyProperty_Priority_1.xaml.cs">
+      <DependentUpon>Page_DenpendencyProperty_Priority_1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Page_RoutedEvent.xaml.cs">
+      <DependentUpon>Page_RoutedEvent.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Page_RoutedEvent_1.xaml.cs">
+      <DependentUpon>Page_RoutedEvent_1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SpaceButton.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -61,6 +75,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BindingData.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -68,6 +83,22 @@
     <Page Include="Page_DenpendencyProperty.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Page_DenpendencyProperty_Priority.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Page_DenpendencyProperty_Priority_1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Page_RoutedEvent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Page_RoutedEvent_1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +130,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="at.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
