--- a/demo/WpfApplication1/WpfApplication2/WpfApplication2.csproj
+++ b/demo/WpfApplication1/WpfApplication2/WpfApplication2.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A5CD38FC-7C7D-4F47-A3D0-00D7E841C767}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WpfApplication2</RootNamespace>
     <AssemblyName>WpfApplication2</AssemblyName>
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -54,20 +57,72 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MySimpleButton.cs" />
-    <Compile Include="Page_DenpendencyProperty_Priority.xaml.cs">
+    <Compile Include="Pages\Host\Page_Content.xaml.cs">
+      <DependentUpon>Page_Content.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Host\Page_UsingFrameAsHost.xaml.cs">
+      <DependentUpon>Page_UsingFrameAsHost.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Hyperlinks\Page1.xaml.cs">
+      <DependentUpon>Page1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Hyperlinks\Page2.xaml.cs">
+      <DependentUpon>Page2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Hyperlinks\Page_NavigationService.xaml.cs">
+      <DependentUpon>Page_NavigationService.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Hyperlinks\Person.cs" />
+    <Compile Include="Pages\Page1.xaml.cs">
+      <DependentUpon>Page1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Property\Page_DenpendencyProperty_Priority.xaml.cs">
       <DependentUpon>Page_DenpendencyProperty_Priority.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Page_DenpendencyProperty_Priority_1.xaml.cs">
+    <Compile Include="Property\Page_DenpendencyProperty_Priority_1.xaml.cs">
       <DependentUpon>Page_DenpendencyProperty_Priority_1.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Page_RoutedEvent.xaml.cs">
+    <Compile Include="RouteEvent\Page_RoutedEvent.xaml.cs">
       <DependentUpon>Page_RoutedEvent.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Page_RoutedEvent_1.xaml.cs">
+    <Compile Include="RouteEvent\Page_RoutedEvent_1.xaml.cs">
       <DependentUpon>Page_RoutedEvent_1.xaml</DependentUpon>
     </Compile>
     <Compile Include="SpaceButton.cs" />
-    <Page Include="MainWindow.xaml">
+    <Compile Include="Window\Window_LifeTime.xaml.cs">
+      <DependentUpon>Window_LifeTime.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window\Window_NoneRegular.xaml.cs">
+      <DependentUpon>Window_NoneRegular.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window\Window_Property.xaml.cs">
+      <DependentUpon>Window_Property.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Pages\Host\Page_Content.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Host\Page_UsingFrameAsHost.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Hyperlinks\Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Hyperlinks\Page2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Hyperlinks\Page_NavigationService.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -76,33 +131,45 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BindingData.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Window\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Page_DenpendencyProperty.xaml">
+    <Page Include="Property\Page_DenpendencyProperty.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Page_DenpendencyProperty_Priority.xaml">
+    <Page Include="Property\Page_DenpendencyProperty_Priority.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Page_DenpendencyProperty_Priority_1.xaml">
+    <Page Include="Property\Page_DenpendencyProperty_Priority_1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Page_RoutedEvent.xaml">
+    <Page Include="RouteEvent\Page_RoutedEvent.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Page_RoutedEvent_1.xaml">
+    <Page Include="RouteEvent\Page_RoutedEvent_1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window\Window_LifeTime.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window\Window_NoneRegular.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window\Window_Property.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Page_DenpendencyProperty.xaml.cs">
+    <Compile Include="Property\Page_DenpendencyProperty.xaml.cs">
       <DependentUpon>Page_DenpendencyProperty.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -136,6 +203,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+  <ItemGroup>
+    <SplashScreen Include="baby.jpg" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
